Basic structure of the notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "main.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbMCpml9V2Dg+jw8bnSbGO"
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNoLD7hCbe7i70TJkZ6REKM"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,15 +18,228 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "xHrM97OhXTr4"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# UCLQ Quantum Energy Hackathon - JASTRZĘBIE TEAM"
+      ],
+      "metadata": {
+        "id": "qqeff1WxZJf-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "### 1.   Install Qiskit\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "TSOhS95tYbEs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xHrM97OhXTr4",
+        "outputId": "c0a551f8-e135-49e0-ee78-4074ba8a13fe"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting qiskit\n",
+            "  Downloading qiskit-0.34.2.tar.gz (13 kB)\n",
+            "Collecting qiskit-terra==0.19.2\n",
+            "  Downloading qiskit_terra-0.19.2-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (6.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 6.5 MB 29.7 MB/s \n",
+            "\u001b[?25hCollecting qiskit-aer==0.10.3\n",
+            "  Downloading qiskit_aer-0.10.3-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (18.0 MB)\n",
+            "\u001b[K     |████████████████████████████████| 18.0 MB 101 kB/s \n",
+            "\u001b[?25hCollecting qiskit-ibmq-provider==0.18.3\n",
+            "  Downloading qiskit_ibmq_provider-0.18.3-py3-none-any.whl (238 kB)\n",
+            "\u001b[K     |████████████████████████████████| 238 kB 53.9 MB/s \n",
+            "\u001b[?25hCollecting qiskit-ignis==0.7.0\n",
+            "  Downloading qiskit_ignis-0.7.0-py3-none-any.whl (200 kB)\n",
+            "\u001b[K     |████████████████████████████████| 200 kB 48.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.16.3 in /usr/local/lib/python3.7/dist-packages (from qiskit-aer==0.10.3->qiskit) (1.21.5)\n",
+            "Requirement already satisfied: scipy>=1.0 in /usr/local/lib/python3.7/dist-packages (from qiskit-aer==0.10.3->qiskit) (1.4.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.0 in /usr/local/lib/python3.7/dist-packages (from qiskit-ibmq-provider==0.18.3->qiskit) (2.8.2)\n",
+            "Collecting websocket-client>=1.0.1\n",
+            "  Downloading websocket_client-1.3.1-py3-none-any.whl (54 kB)\n",
+            "\u001b[K     |████████████████████████████████| 54 kB 2.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests>=2.19 in /usr/local/lib/python3.7/dist-packages (from qiskit-ibmq-provider==0.18.3->qiskit) (2.23.0)\n",
+            "Collecting requests-ntlm>=1.1.0\n",
+            "  Downloading requests_ntlm-1.1.0-py2.py3-none-any.whl (5.7 kB)\n",
+            "Requirement already satisfied: urllib3>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from qiskit-ibmq-provider==0.18.3->qiskit) (1.24.3)\n",
+            "Requirement already satisfied: setuptools>=40.1.0 in /usr/local/lib/python3.7/dist-packages (from qiskit-ignis==0.7.0->qiskit) (57.4.0)\n",
+            "Collecting retworkx>=0.8.0\n",
+            "  Downloading retworkx-0.11.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.6 MB 36.9 MB/s \n",
+            "\u001b[?25hCollecting scipy>=1.0\n",
+            "  Downloading scipy-1.7.3-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (38.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 38.1 MB 1.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: dill>=0.3 in /usr/local/lib/python3.7/dist-packages (from qiskit-terra==0.19.2->qiskit) (0.3.4)\n",
+            "Collecting python-constraint>=1.4\n",
+            "  Downloading python-constraint-1.4.0.tar.bz2 (18 kB)\n",
+            "Requirement already satisfied: sympy>=1.3 in /usr/local/lib/python3.7/dist-packages (from qiskit-terra==0.19.2->qiskit) (1.7.1)\n",
+            "Requirement already satisfied: psutil>=5 in /usr/local/lib/python3.7/dist-packages (from qiskit-terra==0.19.2->qiskit) (5.4.8)\n",
+            "Collecting stevedore>=3.0.0\n",
+            "  Downloading stevedore-3.5.0-py3-none-any.whl (49 kB)\n",
+            "\u001b[K     |████████████████████████████████| 49 kB 5.9 MB/s \n",
+            "\u001b[?25hCollecting symengine>=0.8\n",
+            "  Downloading symengine-0.9.0-cp37-cp37m-manylinux2010_x86_64.whl (37.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 37.5 MB 421 kB/s \n",
+            "\u001b[?25hCollecting tweedledum<2.0,>=1.1\n",
+            "  Downloading tweedledum-1.1.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (943 kB)\n",
+            "\u001b[K     |████████████████████████████████| 943 kB 50.2 MB/s \n",
+            "\u001b[?25hCollecting ply>=3.10\n",
+            "  Downloading ply-3.11-py2.py3-none-any.whl (49 kB)\n",
+            "\u001b[K     |████████████████████████████████| 49 kB 6.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: six>=1.5 in /usr/local/lib/python3.7/dist-packages (from python-dateutil>=2.8.0->qiskit-ibmq-provider==0.18.3->qiskit) (1.15.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.19->qiskit-ibmq-provider==0.18.3->qiskit) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.19->qiskit-ibmq-provider==0.18.3->qiskit) (2021.10.8)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.19->qiskit-ibmq-provider==0.18.3->qiskit) (3.0.4)\n",
+            "Collecting ntlm-auth>=1.0.2\n",
+            "  Downloading ntlm_auth-1.5.0-py2.py3-none-any.whl (29 kB)\n",
+            "Collecting cryptography>=1.3\n",
+            "  Downloading cryptography-36.0.1-cp36-abi3-manylinux_2_24_x86_64.whl (3.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.6 MB 43.1 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.7/dist-packages (from cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.18.3->qiskit) (1.15.0)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.12->cryptography>=1.3->requests-ntlm>=1.1.0->qiskit-ibmq-provider==0.18.3->qiskit) (2.21)\n",
+            "Collecting pbr!=2.1.0,>=2.0.0\n",
+            "  Downloading pbr-5.8.1-py2.py3-none-any.whl (113 kB)\n",
+            "\u001b[K     |████████████████████████████████| 113 kB 50.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: importlib-metadata>=1.7.0 in /usr/local/lib/python3.7/dist-packages (from stevedore>=3.0.0->qiskit-terra==0.19.2->qiskit) (4.11.1)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=1.7.0->stevedore>=3.0.0->qiskit-terra==0.19.2->qiskit) (3.10.0.2)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=1.7.0->stevedore>=3.0.0->qiskit-terra==0.19.2->qiskit) (3.7.0)\n",
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.7/dist-packages (from sympy>=1.3->qiskit-terra==0.19.2->qiskit) (1.2.1)\n",
+            "Building wheels for collected packages: qiskit, python-constraint\n",
+            "  Building wheel for qiskit (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for qiskit: filename=qiskit-0.34.2-py3-none-any.whl size=11805 sha256=255b3abd23ee1b97654ffeed87623003938092cd164cfe262675a5cc4f973bc6\n",
+            "  Stored in directory: /root/.cache/pip/wheels/62/77/65/cda6eedfdd2a525bd3f479a4386930ae3088a1eb01f8c944ed\n",
+            "  Building wheel for python-constraint (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for python-constraint: filename=python_constraint-1.4.0-py2.py3-none-any.whl size=24081 sha256=a447388dd483b33c560927282500bc2072550aeb12c892ee7f6a164d4972a0a3\n",
+            "  Stored in directory: /root/.cache/pip/wheels/07/27/db/1222c80eb1e431f3d2199c12569cb1cac60f562a451fe30479\n",
+            "Successfully built qiskit python-constraint\n",
+            "Installing collected packages: pbr, tweedledum, symengine, stevedore, scipy, retworkx, python-constraint, ply, ntlm-auth, cryptography, websocket-client, requests-ntlm, qiskit-terra, qiskit-ignis, qiskit-ibmq-provider, qiskit-aer, qiskit\n",
+            "  Attempting uninstall: scipy\n",
+            "    Found existing installation: scipy 1.4.1\n",
+            "    Uninstalling scipy-1.4.1:\n",
+            "      Successfully uninstalled scipy-1.4.1\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "albumentations 0.1.12 requires imgaug<0.2.7,>=0.2.5, but you have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
+            "Successfully installed cryptography-36.0.1 ntlm-auth-1.5.0 pbr-5.8.1 ply-3.11 python-constraint-1.4.0 qiskit-0.34.2 qiskit-aer-0.10.3 qiskit-ibmq-provider-0.18.3 qiskit-ignis-0.7.0 qiskit-terra-0.19.2 requests-ntlm-1.1.0 retworkx-0.11.0 scipy-1.7.3 stevedore-3.5.0 symengine-0.9.0 tweedledum-1.1.1 websocket-client-1.3.1\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install qiskit"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%matplotlib inline\n",
+        "import networkx as nx\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from qiskit import QuantumCircuit, ClassicalRegister, QuantumRegister\n",
+        "from qiskit import Aer, execute\n",
+        "from qiskit.circuit import Parameter\n",
+        "from qiskit.visualization import plot_histogram\n",
+        "from scipy.optimize import minimize\n"
+      ],
+      "metadata": {
+        "id": "FlsbqO2EYqOK"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2. Define parameters"
+      ],
+      "metadata": {
+        "id": "f_rbtr1nZYhS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Renewable sources: solar, on-shore and off-shore wind turbines\n",
+        "number_of_renewable_sources = 3\n",
+        "# Locations: England, Northern Ireland, Scotland, Wales\n",
+        "number_of_locations = 4\n",
+        "\n",
+        "# Calculate the number of qubits needed, \n",
+        "# NOTE: IBMQ systems accesible have 5 qubits\n",
+        "nqubits = number_of_locations * number_of_renewable_sources\n",
+        "\n",
+        "G = nx.complete_graph(nqubits)\n",
+        "\n",
+        "total_cost = C = 61510030000.0 # units: £\n",
+        "\n",
+        "# Calculate revenue for each energy source in all locations \n",
+        "# dict{location: [energy_source]}\n",
+        "location_revenue_per_unit = {\n",
+        "    0: [2783.55, 336113.74, 153105454.50],\n",
+        "    1: [2332.31, 434451.22, 0.0],\n",
+        "    2: [1088.38, 1020438.50, 85798571.43],\n",
+        "    3: [3573.59, 768855.93, 140790000],\n",
+        "}\n",
+        "\n",
+        "# Calculate cost for each energy source in all locations\n",
+        "# dict{location: [energy_source]}\n",
+        "location_cost_per_unit = {\n",
+        "    0: [300.92, 52370.72, 22696783.84],\n",
+        "    1: [273.66, 70226.14, 0.0],\n",
+        "    2: [116.17, 161395.70, 11626961.90],\n",
+        "    3: [382.92, 122708.47, 21872844.44],\n",
+        "}\n",
+        "\n",
+        "# variable and a rough estimate, see spreadsheet for current figures.\n",
+        "# dict{location: [energy_source]}\n",
+        "location_unit_capacity = {\n",
+        "    0: [800000, 5000, 40],\n",
+        "    1: [30000, 1400, 0],\n",
+        "    2: [70000, 4000, 10],\n",
+        "    3: [60000, 1000, 5],\n",
+        "}\n",
+        "\n",
+        "# lambda and gamma, the initial parameter guess for the cost function\n",
+        "lam, gam = 1.0, 1.0\n",
+        "\n",
+        "# Calculate the total costs and revenues \n",
+        "a_revs, b_costs = [], []\n",
+        "\n",
+        "for N in range(number_of_locations):\n",
+        "    for R in range(number_of_renewable_sources):\n",
+        "        num_units = location_unit_capacity[N][R]\n",
+        "        a_revs.append(num_units * location_revenue_per_unit[N][R])\n",
+        "        b_costs.append(num_units * location_cost_per_unit[N][R])\n",
+        "        "
+      ],
+      "metadata": {
+        "id": "eu3Cx5-lZhFl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3. The cost function"
+      ],
+      "metadata": {
+        "id": "bfjBfgfMZjQM"
+      }
     }
   ]
 }
